[package]
name = "snmidi"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.1"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
midir = { version = "0.10.3", features = ["coremidi_send_timestamped"] }
midly = "0.5.3"
rand = "0.9.2"
rustfmt = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.22"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["timeapi"] }
